--- a/new_ui/css/style.css
+++ b/new_ui/css/style.css
@@ -11,9 +11,14 @@
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	min-height: 100vh;
-	overflow-x: auto;
+	height: 100vh;
+	/* overflow-x: auto; */
 	background-color: rgb(238, 252, 255);
+}
+
+.main {
+	height: 100%;
+	overflow-x: auto;
 }
 
 .header {
@@ -84,4 +89,12 @@ button {
 
 button:hover {
 	opacity: 70%;
+}
+
+.image-preview img {
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+	display: block;
+	margin: auto;
 }
