--- a/web_app/src/css/style.css
+++ b/web_app/src/css/style.css
@@ -85,3 +85,107 @@ button:hover {
 	opacity: 70%;
 }
 
+.club-card {
+	/* min-width: 260px; */
+	height: fit-content;
+	padding: 15px;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+}
+
+.club-card a {
+	color: black;
+}
+
+.club-card a:hover {
+	color: rgb(85, 85, 85);
+}
+
+.club-card .club-logo {
+	height: 100px;
+	width: 100px;
+	object-fit: cover;
+	display: block;
+}
+
+.club-card .club-card-body {
+	margin-top: 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.club-card .club-name {
+	margin: 0;
+	font-size: 18px;
+	font-weight: 600;
+}
+
+.club-cover-img {
+	height: 200px;
+	width: 100%;
+	object-fit: cover;
+}
+
+.club-logo {
+	height: 160px;
+	width: 160px;
+	object-fit: cover;
+	border-radius: 50%;
+	border: 5px solid white;
+}
+
+
+.club-player-table .avatar {
+	height: 70px;
+	width: 70px;
+	object-fit: cover;
+}
+
+.club-player-table td {
+	vertical-align: middle;
+}
+
+.club-player-table .actions {
+	display: flex;
+	gap: 10px;
+}
+
+.club-player-table .actions a,
+.club-player-table .actions button {
+	font-size: 20px;
+	color: rgba(74, 72, 72, 0.747);
+}
+
+.club-player-table .actions a:hover {
+	color: black;
+}
+
+.club-player-table .actions button:hover>i {
+	color: red;
+}
+
+.club-player-table .actions button {
+	width: fit-content;
+	height: fit-content;
+	border: none;
+	background-color: transparent;
+}
+
+.play-list-table .avatar {
+	height: 70px;
+	width: 70px;
+	object-fit: cover;
+}
+
+.play-list-table td {
+	vertical-align: middle;
+}
+
+.play-list-table .player-detail-btn {
+	color: rgba(74, 72, 72, 0.747);
+}
+
+.play-list-table .player-detail-btn:hover {
+	opacity: 80%;
+}
